tests/neg/empty-given.scala
given {    // error
  def foo = 1  // error
} // error